<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/level_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelActivity">


    <FrameLayout
        android:id="@+id/levelBackgroundContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


    </FrameLayout>

    <ImageView
        android:id="@+id/plant_image_bubble"
        android:layout_width="560dp"
        android:layout_height="560dp"
        android:layout_marginTop="35dp"
        android:scaleType="fitCenter"
        android:src="@drawable/plant_image_bubble"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:shadowColor="#30000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:text="00:00"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />


    <Button
        android:id="@+id/resetEnergyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="重設能量"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButton3" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button8_description"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
        app:layout_constraintEnd_toEndOf="@+id/pokedex_button_container"
        app:layout_constraintStart_toStartOf="@+id/pokedex_button_container"
        app:layout_constraintTop_toTopOf="@+id/imageButton6" />

    <ProgressBar
        android:id="@+id/plantProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="100dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/progress_bar_custom"
        app:layout_constraintBottom_toTopOf="@+id/timerTextView"
        app:layout_constraintEnd_toEndOf="@+id/timerTextView"
        app:layout_constraintStart_toStartOf="@+id/timerTextView" />

    <TextView
        android:id="@+id/energyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="130dp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/timerTextView"
        app:layout_constraintEnd_toEndOf="@+id/timerTextView"
        app:layout_constraintStart_toStartOf="@+id/timerTextView" />

    <ImageView
        android:id="@+id/plant_image_view"
        android:layout_width="450dp"
        android:layout_height="450dp"
        android:layout_marginTop="35dp"
        android:contentDescription="當前種植的植物"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plant_1_1_s1" />

    <ImageView
        android:id="@+id/floatingEnergyAnimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="浮動能量動畫"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/plant_image_view"
        app:layout_constraintEnd_toEndOf="@+id/plant_image_view"
        app:layout_constraintStart_toStartOf="@+id/plant_image_view"
        app:layout_constraintTop_toTopOf="@+id/plant_image_view" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="45dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button6_description"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button1_description"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button5_description"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button2_description"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginEnd="-5dp"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pokedex_button_container"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/button4_description"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_button4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/gif_badge_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="-12dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_button4_reddot" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- 開始/暫停按鍵的全畫面擴散補間效果圖層（預設隱藏） -->
    <ImageView
        android:id="@+id/timerWaveOverlay"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:alpha="0"
        android:clickable="false"
        android:focusable="false"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imageButton3"
        app:layout_constraintEnd_toEndOf="@id/imageButton3"
        app:layout_constraintStart_toStartOf="@id/imageButton3"
        app:layout_constraintTop_toTopOf="@id/imageButton3" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button3_description"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>